--- a/Graviton.DX/Graviton.DX.csproj
+++ b/Graviton.DX/Graviton.DX.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -38,6 +39,30 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\Graviton.Server\Extensions.cs">
+      <Link>Extensions.cs</Link>
+    </Compile>
+    <Compile Include="..\Graviton.Server\Processing\AuthenticateRequest.cs">
+      <Link>Processing\AuthenticateRequest.cs</Link>
+    </Compile>
+    <Compile Include="..\Graviton.Server\Processing\AuthenticateResponse.cs">
+      <Link>Processing\AuthenticateResponse.cs</Link>
+    </Compile>
+    <Compile Include="..\Graviton.Server\Processing\GameStateResponse.cs">
+      <Link>Processing\GameStateResponse.cs</Link>
+    </Compile>
+    <Compile Include="..\Graviton.Server\Processing\ICanSerialize.cs">
+      <Link>Processing\ICanSerialize.cs</Link>
+    </Compile>
+    <Compile Include="..\Graviton.Server\Processing\ItemTypes.cs">
+      <Link>Processing\ItemTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\Graviton.Server\Processing\PlayerRequest.cs">
+      <Link>Processing\PlayerRequest.cs</Link>
+    </Compile>
+    <Compile Include="..\Graviton.Server\Processing\PlayerStateResponse.cs">
+      <Link>Processing\PlayerStateResponse.cs</Link>
+    </Compile>
     <Compile Include="Cameras\Camera.cs" />
     <Compile Include="Cursors\Cursor.cs" />
     <Compile Include="Diagnostics\FrameRate.cs" />
@@ -47,7 +72,10 @@
     <Compile Include="Effects\Bloom.cs" />
     <Compile Include="Effects\BloomSettings.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="HostedGame.cs" />
     <Compile Include="Indexing\QuadTree.cs" />
+    <Compile Include="Net\SocketState.cs" />
+    <Compile Include="Net\TcpClient.cs" />
     <Compile Include="Players\Disc.cs" />
     <Compile Include="Players\Genesoid.cs" />
     <Compile Include="Players\Matter.cs" />
@@ -78,6 +106,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
@@ -94,6 +123,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="Content\BloomCombine.fx" />
     <None Include="Content\BloomExtract.fx" />
     <None Include="Content\Font.spritefont" />
