--- a/Graviton.Server/Graviton.Server.csproj
+++ b/Graviton.Server/Graviton.Server.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Processing\GameStateResponse.cs" />
     <Compile Include="Processing\ICanSerialize.cs" />
     <Compile Include="Processing\ItemTypes.cs" />
-    <Compile Include="Processing\PlayerResponse.cs" />
+    <Compile Include="Processing\PlayerStateResponse.cs" />
     <Compile Include="Processing\UserInputs.cs" />
     <Compile Include="Processing\PlayerRequest.cs" />
     <Compile Include="Processing\Scheduler.cs" />
